--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator Odin</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
-    <h1>CALCULATOR HERE</h1>
+    <h1>CALCULATOR APP</h1>
+    <div class="container">
+        <div class="display">0</div>
+        <div class="button-container">
+            <div class="number-container">
+                <button class="number-button">7</button>
+                <button class="number-button">8</button>
+                <button class="number-button">9</button>
+                <button class="number-button">4</button>
+                <button class="number-button">5</button>
+                <button class="number-button">6</button>
+                <button class="number-button">1</button>
+                <button class="number-button">2</button>
+                <button class="number-button">3</button>
+                <button class="number-button">0</button>
+            </div>
+            <div class ='operation-container'>
+                <button class="operation-button">+</button>
+                <button class="operation-button">-</button>
+                <button class="operation-button">/</button>
+                <button class="operation-button">x</button>
+                <button class="operation-button equal">=</button>
+                <button class="operation-button">c</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
