--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <button class="number-button">1</button>
                 <button class="number-button">2</button>
                 <button class="number-button">3</button>
-                <button class="number-button">0</button>
+                <button class="number-button zero">0</button>
+                <button class="number-button decimal">.</button>
             </div>
             <div class ='operation-container'>
                 <button class="operation-button">+</button>
@@ -30,7 +31,7 @@
                 <button class="operation-button">/</button>
                 <button class="operation-button">x</button>
                 <button class="operation-button equal">=</button>
-                <button class="operation-button">c</button>
+                <button class="operation-button clear">c</button>
             </div>
         </div>
     </div>
